--- a/ESPHome/retic-controller.yaml
+++ b/ESPHome/retic-controller.yaml
@@ -49,6 +49,11 @@ substitutions:
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password
 
+
+  # Status LEDs GPIO assignments
+  status_led_gpio: GPIO15
+  wifi_led_gpio: GPIO16
+
   # Sprinkler Component variables
   duration_entity_mode: SLIDER     # Changes the integration input mode, recommend BOX or SLIDER 
   valve_overlap_setting: 5s     # Set the overlap between two valves, helps reduce banging
@@ -161,6 +166,37 @@ wifi:
 # The captive portal component in ESPHome is a fallback mechanism for when connecting to the configured WiFi fails.
 ###################################
 captive_portal:
+
+###################################
+# Output component
+###################################
+output:
+  - platform: gpio
+    pin: $wifi_led_gpio        
+    id: wifi_led_out
+    inverted: false
+
+  - platform: gpio
+    pin: $status_led_gpio       
+    id: status_led_out
+    inverted: false
+
+
+###################################
+# Light component
+###################################
+light:
+  - platform: binary
+    name: "WiFi LED"
+    output: wifi_led_out
+    id: wifi_led
+    internal: true
+
+  - platform: binary
+    name: "System Status LED"
+    output: status_led_out
+    id: status_led
+    internal: true
 
 #########################################
 # Sprinkler components – Three Programs
@@ -1375,14 +1411,6 @@ time:
         minutes: "*"
         then:
 
-          # Update device time sensor.
-          - text_sensor.template.publish:
-              id: current_time
-              state: !lambda |-
-                char buf[16];
-                sprintf(buf, "%02d:%02d", id(ha_time).now().hour, id(ha_time).now().minute);
-                return std::string(buf);
-
           # Here is where the scripts for the programs are executed
 
           # Program 1
@@ -1627,12 +1655,6 @@ text_sensor:
   - platform: version
     name: "ESPHome Firmware Version"
     id: firmware_version
-
-  # Expose current time set on the device
-  - platform: template
-    name: "Current Time"
-    id: current_time
-    update_interval: never
 
   # Expose currently running zone
   - platform: template
@@ -1919,10 +1941,15 @@ interval:
   # Interval every 10 seconds
   - interval: 10s
     then:
-      logger.log:
-        tag: "interval"
-        format: "Heartbeat"
-        level: INFO
+      # Log heartbeat
+      - logger.log:
+          tag: "interval"
+          format: "Heartbeat"
+          level: INFO
+
+      # Run status LED scripts
+      - script.execute: update_status_led
+      - script.execute: update_wifi_led
 
   # Interval every 1 hour
   - interval: 1h
@@ -1940,6 +1967,63 @@ interval:
 ###################################
 
 script:
+
+  # Turns on the status LED if there is a program runnings
+  - id: update_status_led
+    then:
+      - lambda: |-
+          bool running = false;
+          // Check if any program is running (i.e. not in the IDLE state)
+          if (id(esprinkler_prog1)->controller_state() != esphome::sprinkler::SprinklerState::IDLE) {
+            running = true;
+          } else if (id(esprinkler_prog2)->controller_state() != esphome::sprinkler::SprinklerState::IDLE) {
+            running = true;
+          } else if (id(esprinkler_prog3)->controller_state() != esphome::sprinkler::SprinklerState::IDLE) {
+            running = true;
+          }
+          if (running) {
+            id(status_led).turn_on();
+          } else {
+            id(status_led).turn_off();
+          }
+
+  # Controls the wifi LED using flashing patterns, a single pulse indicates a connection, multiple pulses indicates
+  # no connection
+  - id: update_wifi_led
+    then:
+
+      # If wifi is connected, flash every second
+      - if:
+          condition:
+            lambda: 'return (WiFi.status() == WL_CONNECTED);'
+          then:
+            - if:
+                condition:
+                  lambda: 'return (id(ha_time).now().second % 30) == 0;'
+                then:
+                  - light.turn_on:
+                      id: wifi_led
+                  - delay: 1s
+                  - light.turn_off:
+                      id: wifi_led
+
+          # If wifi is not connected, flash the LED regularly
+          else:
+            - repeat:
+                count: 3
+                then:
+                  - light.turn_on:
+                      id: wifi_led
+                  - delay: 200ms
+                  - light.turn_off:
+                      id: wifi_led
+                  - delay: 200ms
+
+
+
+  #######################
+  # Sprinkler Scripts
+  #######################
 
   ###############
   # Program 1
@@ -2223,6 +2307,7 @@ script:
                 format: "No active cycle detected, starting full cycle."
                 level: INFO
             - sprinkler.start_full_cycle: ${id_prefix}_prog1
+            - script.execute: update_status_led
           else:
             - logger.log:
                 tag: "script"
@@ -2474,6 +2559,7 @@ script:
                 format: "No active cycle detected, starting full cycle."
                 level: INFO
             - sprinkler.start_full_cycle: ${id_prefix}_prog2
+            - script.execute: update_status_led
           else:
             - logger.log:
                 tag: "script"
@@ -2725,6 +2811,7 @@ script:
                 format: "No active cycle detected, starting full cycle."
                 level: INFO
             - sprinkler.start_full_cycle: ${id_prefix}_prog3
+            - script.execute: update_status_led
           else:
             - logger.log:
                 tag: "script"
