--- a/ESPHome/retic-controller.yaml
+++ b/ESPHome/retic-controller.yaml
@@ -48,6 +48,8 @@ substitutions:
   ap_password: "password"   # Wi-fi AP password
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password
+  web_server_username: admin
+  web_server_password: admin
 
 
   # Status LEDs GPIO assignments
@@ -90,7 +92,7 @@ substitutions:
 
   # Names and name IDs
   project_author: "Alexander Lauderdale"
-  name_of_device: esprinkler-retic-controller   # Name of the device
+  name_of_device: "esprinkler-retic-controller"   # Name of the device
   name_of_project: esprinkler                   # Name of the project
   namespace_of_project: ${project_author}.${name_of_device}
   friendly_name: "ESPrinkler Retic Controller"  # Friendly name
@@ -166,6 +168,15 @@ wifi:
 # The captive portal component in ESPHome is a fallback mechanism for when connecting to the configured WiFi fails.
 ###################################
 captive_portal:
+
+###################################
+# Web Server settings
+###################################
+web_server:
+  port: 80
+  auth:
+    username: $web_server_username
+    password: $web_server_password
 
 ###################################
 # Output component
